# webapp

./: .gitignore  Cargo.toml
src/: data_handling.rs  database.rs  main.rs  user_handling.rs
templates/: game_looking.html.tera  index.html.tera  login.html.tera  login_register_response.html.tera  register.html.tera
